feat: add transition color in button

--- a/main.css
+++ b/main.css
@@ -34,13 +34,22 @@
     margin-right: 10px;
     outline: none;
     padding-left: 6px;
+    border-radius: 3px;
+    border: 1px solid #00000081;
 }
 
 .btn-search {
     width: 4rem;
     height: 2rem;
     cursor: pointer;
+    border-radius: 3px;
+    border: 1px solid #535353;
+    
+}
 
+.btn-search:hover{
+    background-color: #dddddd;
+    transition: .3s;
 }
 
 .cep-text {
@@ -52,23 +61,31 @@
 
 }
 
+.tablecep {
+    transition: .4s;
+}
+
 table {
 	border-collapse: collapse;
     font-family: Tahoma, Geneva, sans-serif;
 }
+
 table td {
 	padding: 15px;
     width: 14.8rem;
 }
+
 table thead td {
 	color: #ffffff;
 	font-weight: bold;
 	font-size: 13px;
 }
+
 table tbody td {
 	color: #636363;
 	border: 1px solid #bdbdbd;
 }
+
 table tbody tr {
 	background-color: #cfcfcf;
     font-weight: bold;
